--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 			<option value='Agriculture, Forestry, and Fishing'>Agriculture, Forestry, and Fishing</option>
 			<option value='Mining'>Mining</option>
 			<option value='Construction'>Construction</option>
+			<option value='Manufacturing'>Manufacturing</option>
 			<option value='Transportation, Communication, and Public Utilities'>Transportation, Communication, and Public Utilities</option>
 			<option value='Wholesale Trade'>Wholesale Trade</option>
+			<option value='Retail Trade'>Wholesale Trade</option>
 			<option value='Finance, Insurance, and Real Estate'>Finance, Insurance, and Real Estate</option>
 			<option value='Services'>Services</option>
 		</select>
@@ -44,7 +46,7 @@
 		<button>Submit</button>
 	</div>
 	<div>
-		<p class='results-paragraph'>There are X number of people within those criteria</p>
+		<p class='results-paragraph'>There are X number of firms within those criteria</p>
 	</div>
 	<div>
 		
