--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<h1>Type In Your Sector and Firm's Age</h1>
+	<h1>Select Your Sector and Firm's Age</h1>
 	<h2>Find out how many firms fit the criteria</h2>
 	<p>Select Your Sector</p>
 	<div class='sector-div'>
@@ -20,7 +20,7 @@
 			<option value='Manufacturing'>Manufacturing</option>
 			<option value='Transportation, Communication, and Public Utilities'>Transportation, Communication, and Public Utilities</option>
 			<option value='Wholesale Trade'>Wholesale Trade</option>
-			<option value='Retail Trade'>Wholesale Trade</option>
+			<option value='Retail Trade'>Retail Trade</option>
 			<option value='Finance, Insurance, and Real Estate'>Finance, Insurance, and Real Estate</option>
 			<option value='Services'>Services</option>
 		</select>
@@ -45,8 +45,8 @@
 	<div class='submit-button'>
 		<button>Submit</button>
 	</div>
-	<div>
-		<p class='results-paragraph'>There are X number of firms within those criteria</p>
+	<div class='results-div'>
+		<p class='results-paragraph'></p>
 	</div>
 	<div>
 		
