--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 	<div class='firm-age-div'>
 		<select class='firm-age-dropdown'>
 			<option value='Economy Wide – All Ages (selected by default)'>Economy Wide – All Ages (selected by default)</option>
-			<option value='0'>0</option>
-			<option value='1'>1</option>
-			<option value='3'>3</option>
-			<option value='4'>4</option>
-			<option value='5'>5</option>
-			<option value='6-10'>6-10</option>
-			<option value='11-15'>11-15</option>
-			<option value='16-20'>16-20</option>
-			<option value='21-25'>21-25</option>
-			<option value='26+'>26+</option>
+			<option value='0-1 years'>0-1 years</option>
+			<option value='1-3 years'>1-3 years</option>
+			<option value='3-4 years'>3-4 years</option>
+			<option value='4-5 years'>4-5 years</option>
+			<option value='5-6 years'>5-6 years</option>
+			<option value='6-10 years'>6-10 years</option>
+			<option value='11-15 years'>11-15 years</option>
+			<option value='16-20 years'>16-20 years</option>
+			<option value='21-25 years'>21-25 years</option>
+			<option value='26+ years'>26+ years</option>
 			<option value='Left Censored'>Left Censored</option>
 		</select>
 	</div>
